samples/_failures_safe/1761318316_07a459_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea967b73.c: In function ‘main’:
./samples/SAFE/__tmp_ea967b73.c:170:39: error: expected ‘)’ at end of input
  170 |     for (int i = 0; i < token_count; i
      |         ~                             ^
      |                                       )
./samples/SAFE/__tmp_ea967b73.c:170:5: error: expected declaration or statement at end of input
  170 |     for (int i = 0; i < token_count; i
      |     ^~~
